--- a/src/app/pages/news-category/components/create-news-category/create-news-category.component.html
+++ b/src/app/pages/news-category/components/create-news-category/create-news-category.component.html
@@ -6,7 +6,7 @@
     {{'modify'|translate}}
   </span>
   <span>
-    {{'posting_category' | translate}}
+    {{'news_category' | translate}}
   </span>
 </div>
 <div nz-row [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32 }">
