--- a/src/app/pages/news-category/components/news-category-list/news-category-list.component.html
+++ b/src/app/pages/news-category/components/news-category-list/news-category-list.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-  {{ 'posting_category_list' | translate }}
+  {{ 'news_category_list' | translate }}
 </div>
 
 <div class="header-btn">
