--- a/src/app/pages/forum/components/category/forum-category-detail/forum-category-detail.component.html
+++ b/src/app/pages/forum/components/category/forum-category-detail/forum-category-detail.component.html
@@ -15,10 +15,13 @@
     <form [formGroup]="forumCategoryForm">
       <div nz-row [nzGutter]=[16,16]>
         <div nz-col [nzSpan]="8">
-          <span class="text-label">
-            {{'category_name' | translate }}
-            <span class="text-danger">*</span>
-          </span>
+          <div class="d-flex justify-content-between align-items-center">
+            <span class="text-label">
+              {{'category_name' | translate }}
+              <span class="text-danger">*</span>
+            </span>
+            <span nzTooltipTitle="{{'guide_community_category_name' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
+          </div>
           <input nz-input autofocus formControlName="name" [nzStatus]="(forumCategoryForm.get('name')?.invalid &&
                              (forumCategoryForm.get('name')?.touched || isSubmit)) ? 'error' : ''">
 
@@ -30,7 +33,7 @@
 
         <div nz-col [nzSpan]="8">
           <span class="text-label">
-          {{'banner_link' | translate}} 
+            {{'banner_link' | translate}}
             <span class="text-danger">*</span>
           </span>
 
@@ -65,8 +68,11 @@
         <div nz-col [nzSpan]="8"></div>
 
         <div nz-col [nzSpan]="16">
-          <div class="text-label">
-            {{'short_description' | translate}}
+          <div class="d-flex align-items-center">
+            <div class="text-label" style="margin-right:.5rem">
+              {{'short_description' | translate}}
+            </div>
+            <span nzTooltipTitle="{{'guide_community_category_description' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
           </div>
           <textarea nz-input [nzAutosize]="{ minRows: 3 }" formControlName="shortDescription"></textarea>
         </div>
