update localization "funnel_course" <--> "course_funnel"

--- a/src/app/pages/setting/components/courses/create-course/create-course.component.html
+++ b/src/app/pages/setting/components/courses/create-course/create-course.component.html
@@ -97,7 +97,7 @@
 
           <div>
             <nz-select formControlName="type">
-              <nz-option [nzValue]="1" [nzLabel]="'funnel_course' | translate"></nz-option>
+              <nz-option [nzValue]="1" [nzLabel]="'course_funnel' | translate"></nz-option>
               <nz-option [nzValue]="2" [nzLabel]="'big_course' | translate"></nz-option>
             </nz-select>
           </div>
