fix: count Student to string E-config

--- a/src/app/pages/e-learning-config/components/home-page-config/home-page-config.component.html
+++ b/src/app/pages/e-learning-config/components/home-page-config/home-page-config.component.html
@@ -173,16 +173,16 @@
 
           <div nz-col [nzSpan]="16">
             <span class="text-label">
-              Tiêu đề phụ 1
+              Mô tả 1
             </span>
-            <textarea nz-input [nzAutosize]="{ minRows: 3 }" formControlName="subTitle01"></textarea>
+            <textarea nz-input [nzAutosize]="{ minRows: 3 }" formControlName="desc01"></textarea>
           </div>
 
           <div nz-col [nzSpan]="16">
             <span class="text-label">
-              Tiêu đề phụ 2
+              Mô tả 2
             </span>
-            <textarea nz-input [nzAutosize]="{ minRows: 3 }" formControlName="subTitle02"></textarea>
+            <textarea nz-input [nzAutosize]="{ minRows: 3 }" formControlName="desc02"></textarea>
           </div>
 
           <div nz-col [nzSpan]="8"></div>
@@ -323,14 +323,14 @@
 
           <div nz-col [nzSpan]="16">
             <span class="text-label">
-              Tiêu đề phụ 1
+              Mô tả phụ 1
             </span>
             <textarea nz-input [nzAutosize]="{ minRows: 3 }" formControlName="subTitle01"></textarea>
           </div>
 
           <div nz-col [nzSpan]="16">
             <span class="text-label">
-              Tiêu đề phụ 2
+              Mô tả phụ 2
             </span>
             <textarea nz-input [nzAutosize]="{ minRows: 3 }" formControlName="subTitle02"></textarea>
           </div>
